<resources>
    <string name="app_name">bio-Net</string>

    <string-array name="Giros">
        <item>Turismo</item>
        <item>Energías Renovables</item>
        <item>Tecnologías de la información</item>
        <item>Industria Alimentaria</item>
    </string-array>

    <string-array name="traslados">
        <item>Traslado definitivo</item>
        <item>Traslado temporal</item>
    </string-array>

    <string-array name="SKU">
        <item>SKU</item>
    </string-array>

    <string-array name="Producto">
        <item>Producto</item>
    </string-array>

    <string-array name="Categoría">
        <item>Categoría</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activar_licencia"><u>Activar Licencia</u></string>
    <string name="dialog_select_photo">Select Photo</string>
    <string name="contrasenia_olvidada"><u>¿Olvidaste tu contraseña?</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Url">http://187.189.192.150:8010</string>
    <string name="Url2">http://192.168.100.164:8010</string>


    <!-- Main Screen -->
    <string name="txt_examples">Aquí puedes encontrar una lista de ejemplos que te ayudarán a integrar el SDK de MercadoLibre para Android en tu app. </string>
    <string name="btn_login_examples">Ingresar/Registrar Usuario</string>
    <string name="btn_simple_get">Get</string>
    <string name="btn_auth_get">Get (auntenticado)</string>
    <string name="btn_simple_post">Post</string>
    <string name="btn_simple_put">Put</string>
    <string name="btn_simple_delete">Delete</string>

    <!-- Result Screen -->
    <string name="result_title">Resultado</string>
    <string name="result_code">Código de resultado: %1$s</string>
    <string name="result_content">Contenido: %1$s</string>

    <!-- Login Screen -->
    <string name="user_id_text">User ID: %1$s</string>
    <string name="access_token_text">Access Token: %1$s</string>
    <string name="expires_in_text">Expires in: %1$s</string>

    <!-- Declare the proper app identifier for this application -->
    <string name="meli_app_id">7895674329598463</string>

    <!-- Declare the Redirect URI requested by the Meli SDK -->
    <string name="meli_redirect_uri">https://www.mobilesdkpoc.com</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- BLUETOOTH -->
    <string name="textView_buscando_bluetooth">BUSCANDO...</string>
    <string name="textView_conectando_bluetooth">CONECTANDO...</string>
    <string name="textView_not_device">BUSQUE PRIMERO UN DISPOSITIVO</string>
    <string name="text_busquedaFinalizada">BUSQUEDA FINALIZADA</string>

    <string name="text_conexion_sucess">CONEXIÓN EXITOSA</string>
    <string name="text_conexion_error">ERROR EN CONEXIÓN, INTENTE DE NUEVO</string>

    <string name="text_devices_encontrados">DISPOSITIVOS ENCONTRADOS</string>
    <string name="text_not_devices_encontrados">NINGUN DISPOSITIVO ENCONTRADO</string>

    <!-- TIPOS DE VENTAS -->
    //
    <string-array name="sale_array">
        <item>Venta Retail - Sin propina</item>
        <item>Venta Retail - Con propina</item>
        <item>Venta MSI_03 - Sin propina</item>
        <item>Venta MSI_03 - Con propina</item>
        <item>Venta MSI_06 - Sin propina</item>
        <item>Venta MSI_06 - Con propina</item>
        <item>Venta MSI_09 - Sin propina</item>
        <item>Venta MSI_09 - Con propina</item>
        <item>Venta MSI_12 - Sin propina</item>
        <item>Venta MSI_12 - Con propina</item>
    </string-array>

    <string name="btn_search">BUSCAR</string>
    <string name="btn_connect">CONECTAR</string>
    <string name="btn_disconnect">DESCONECTAR</string>

    <string name="textView_cobrando">COBRANDO</string>
    <string name="text_feenicia_demo">FEENICIA BLUETOOTH</string>

    <string name="textView_ejecutarDispositivo_bluetooth">Inserte tarjeta con CHIP o deslice tarjeta con banda</string>

    <!-- ALERT -->
    <string name="dialog_mensaje_venta_salir">Puede que una transacción este en curso, ¿Seguro que desea salir?</string>
    <string name="dialog_NO">No</string>
    <string name="dialog_SI">Si</string>
    <!-- MENSAJES COBRO -->
    <string name="msj_tx_result">RESULTADO DE LA TX</string>
    <string name="msj_tx_finish">TRANSACCIÓN FINALIZADA</string>
    <string name="msj_read_Card">LEYENDO TARJETA</string>

</resources>
